--- a/templates/index.html
+++ b/templates/index.html
@@ -11,21 +11,36 @@
     #video {
         transform: scaleX(-1);
     }
-
     .container {
         display: flex;
         flex-direction: column;
         align-items: center;
         justify-content: center;
     }
+    .video-feed-container {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        margin-top: 20px;
+    }
+    #processedImage, #video, #canvas {
+        max-width: 100%;
+        max-height: 100vh;
+        height: auto;
+        width: auto;
+        object-fit: contain;
+    }
 </style>
 <body>
     <div class="container">
         <h1>WebSocket Webcam Capture</h1>
-        <video id="video" width="640" height="480" autoplay></video>
-        <canvas id="canvas" width="640" height="480" style="display:none;"></canvas>
-        <img id="processedImage" width="640" height="640">
-        <div id="prediction" style="font-size: 48px; margin-top: 20px;"></div>
+        <div class="video-feed-container">
+            <video id="video" autoplay></video>
+            <canvas id="canvas" width="640" height="480" style="display:none;"></canvas>
+            <img id="processedImage" width="640" height="640">
+        </div>
+        <div id="prediction" style="text-align: center; font-size: 5vw; margin-top: 20px;"></div>
         <p id="aspectRatio"></p>
     </div>
 
